add some logging

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/transfer_base.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/transfer_base.html
@@ -18,7 +18,7 @@ Transfer/refund is pending! You can cancel it.
     </button>
 </form>
 
-{% elsif object.status == 'i' %}
+{% elif object.status == 'i' %}
 Transfer is in progress ~
 {% else %}
 {% block transfer %}
