--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -24,7 +24,7 @@
                 <div class="form-group">
                     <form method="post">{% csrf_token %}
                         {{ form.as_p }}
-                        <input type="submit" value="Send">
+                        <input type="submit" class="btn btn-block btn-primary btn-lg" value="Register">
                     </form>
                 </div>
             </div>
