refer to faq for deadname, show ip to debug get_client_ip

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 <h1>Lottery Registration</h1>
+<!-- {{ ip }} -->
 {% if not open %}
     <h2>We're closed</h2>
     Sorry! Come back later/earlier.
@@ -15,7 +16,7 @@
     <h2>Important</h2>
     <p>You <strong>must</strong> register with your <strong>real name and date of birth</strong>, as it appears on official documents. When you buy a membership you must enter <strong>the same information</strong> as you do here. When we exchange your membership for a wristband we will <strong>ask to see official ID documents</strong>.</p>
     <p>We may invalidate your membership if the information does not match. If the name on your ID does not match your membership, we may deny you entry to the event. This is to stop cheating by entering several times in the lottery.</p>
-    <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. If you need special considerations please get in touch.</p>
+    <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. If you want special considerations, please check the <a href="../page/faq">FAQ</a> and get in touch. </p>
 
     <h2>Registration Form</h2>
     <div class="container">
