real->legal name

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/transfer_base.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/transfer_base.html
@@ -19,7 +19,7 @@ Transfer/refund is pending! You can cancel it.
 </form>
 
 {% elif object.status == 'i' %}
-Transfer is in progress ~
+Transfer is in progress ~ 🚚
 {% else %}
 {% block transfer %}
 {% endblock %}
