apparently is enough to refer to the key of context when rendering the template

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -4,9 +4,9 @@
 
 {% block title %}Registration{% endblock %}
 
-
 {% block content %}
-{% if not context.open %}
+
+{% if not open %}
     <h2>We're closed</h2>
     Sorry! Come back later/earlier.
 {% else %}
