--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/registration_button.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/registration_button.html
@@ -2,7 +2,7 @@
 {% load bootstrap3 %}
 
 
-{% if context.open %}
+{% if open %}
 <section class="front-page">
     <h1>Lottery registration</h1>
     <div class="row-fluid">
