Fix the rendering forms logic so that the low income page is shown after the registration

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-{% if not open %}
+{% if not registration_opened %}
     <h2>We're closed</h2>
     Sorry! Come back later/earlier.
 {% else %}
