--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
@@ -6,16 +6,16 @@
 
 {% block content %}
 
-{% if not (open and low_income_enabled) %}
+{% if not low_income_enabled %}
     <h2>Weird</h2>
     You shouldn't be here. If you think this is a mistake, please get in touch.
 {% else %}
 
     <p>
-        Up to this point you've been registered for the Borderland lottery, Hurray! <br/>
-        All is good in that regard, now, since you've applied for a low income membership, we'd like to collect some more information about you.
+        Up to this point you've been registered for the Borderland lottery, Hurray! <br>
     </p>
     <p>
+        All is good in that regard, now, since you've applied for a low income membership, we'd like to collect some more information about you. <br/>
         The membership team may contact you to ask for more information about your income, as well as other information, to study the eligibility of your case.
     </p>
 
