--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -10,31 +10,40 @@
     <h2>We're closed</h2>
     Sorry! Come back later/earlier.
 {% else %}
-    <strong>NOTE:</strong> Since the event has a limited capacity we sell memberships using a lottery. Read more about it on the <a href="..">front page</a>.
-    <h2>Important</h2>
-    <p>You <strong>must</strong> register with your <strong>legal name and date of birth</strong>, as it appears on official documents. When you buy a membership you must enter <strong>the same information</strong> as you do here. When we exchange your membership for a wristband we will <strong>ask to see official ID documents</strong>.</p>
-    <p>We may invalidate your membership if the information does not match. If the name on your ID does not match your membership, we may deny you entry to the event. This is to stop cheating by entering several times in the lottery.</p>
-    <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. If you want special considerations, please check the <a href="../page/faq">FAQ</a> and get in touch. </p>
-
-    <h2>Registration Form</h2>
-    <div class="container">
-        <div class="row">
-            <div class='col-sm-6'>
-                <div class="form-group">
-                    <form id="register_form" method="post">{% csrf_token %}
-                        <table>
-                        {{ form.as_table }}
-                        </table>
-                        <br/>
-                        &#8212;Cough, Cough&#8212; Darling 🤖❤️, if you're rolling in dough 💰, then back off the low income membership option for the good of all!.<br/>
-                        No funny business &#8211; <strong>only check it if you really need it</strong>
-
-                        <input type="submit" class="btn btn-block btn-primary btn-lg" value="Register">
-                    </form>
+    <div class="col-sm-12">
+        <div class="col-sm-10">
+            <strong>NOTE:</strong> Since the event has a limited capacity we sell memberships using a lottery. Read more about it on the <a href="..">front page</a>.
+            <h2>Important</h2>
+            <p>You <strong>must</strong> register with your <strong>legal name and date of birth</strong>, as it appears on official documents. When you buy a membership you must enter <strong>the same information</strong> as you do here. When we exchange your membership for a wristband we will <strong>ask to see official ID documents</strong>.</p>
+            <p>We may invalidate your membership if the information does not match. If the name on your ID does not match your membership, we may deny you entry to the event. This is to stop cheating by entering several times in the lottery.</p>
+            <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. If you want special considerations, please check the <a href="../page/faq">FAQ</a> and get in touch. </p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class='col-sm-10'>
+                    <h2>Registration Form</h2>
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <form id="register_form" method="post">{% csrf_token %}
+                                <table>
+                                {{ form.as_table }}
+                                </table>
+                                <br/>
+                                <div class="col-sm-12">
+                                &#8212;Cough, Cough&#8212; Darling 🤖❤️, if you're rolling in dough 💰, then back off the low income membership option for the good of all!.<br/>
+                                No funny business &#8211; <strong>only check it if you really need it</strong>
+                                &nbsp;<br/>
+                                &nbsp;<br/>
+                                </div>
+                                <input type="submit" class="btn btn-block btn-primary btn-lg" value="Register">
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <p><small>This information is collected only to conduct the lottery.</small></p>
 {% endif %}
