--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
@@ -10,26 +10,31 @@
     <h2>Weird</h2>
     You shouldn't be here. If you think this is a mistake, please get in touch.
 {% else %}
+    <div class="col-sm-12">
+        <div class="col-sm-10">
+            <p>
+                Up to this point you've been registered for the Borderland lottery, Hurray! <br>
+            </p>
+            <p>
+                All is good in that regard, now, since you've applied for a low income membership, we'd like to collect some more information about you. <br/>
+                The membership team may contact you to ask for more information about your income, as well as other information, to study the eligibility of your case.
+            </p>
+        </div>
 
-    <p>
-        Up to this point you've been registered for the Borderland lottery, Hurray! <br>
-    </p>
-    <p>
-        All is good in that regard, now, since you've applied for a low income membership, we'd like to collect some more information about you. <br/>
-        The membership team may contact you to ask for more information about your income, as well as other information, to study the eligibility of your case.
-    </p>
-
-    <h2>Low Income Membership Form</h2>
-    <div class="container">
-        <div class="row">
-            <div class='col-sm-6'>
-                <div class="form-group">
-                    <form method="post">{% csrf_token %}
-                        <table>
-                        {{ form.as_table }}
-                        </table>
-                        <input type="submit" class="btn btn-block btn-primary btn-lg" value="Submit">
-                    </form>
+        <div class="col-sm-10">
+            <h2>Low Income Membership Form</h2>
+            <div class="container">
+                <div class="row">
+                    <div class='col-sm-10'>
+                        <div class="form-group">
+                            <form method="post">{% csrf_token %}
+                                <table>
+                                {{ form.as_table }}
+                                </table>
+                                <input type="submit" class="btn btn-block btn-primary btn-lg" value="Submit">
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
