Fixes to make the whole flow work!!!
So close we are to launch for the lotery registration that there is no
time to write nice and decent comments...

Well, what can I say, Django is a monster with lots of legs

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
@@ -19,12 +19,14 @@
                 <h2>Low Income Membership Form</h2>
 
                 <p>
-                    Up to this point you've been registered for the Borderland lottery, Hurray! 💥 <br/><br>
+                    Up to this point you've been registered for the Borderland lottery <br/><br>
                 </p>
                 <p>
-                    Hey there, everything's hunky-dory in the lottery registration department, we've got you in for the Grand Prize.
-                    But since you're ballin' on a budget, we gotta get the deets on you.<br/>
-                    Don't worry, the Membership team is in charge, and they may get in touch to suss out additional info of your earnings and whatnot to see if you're a good fit.
+                    Hey there, everything's hunky-dory in the lottery registration department: we've got you in for the Grand Prize, Hurray! 💥
+                    <br/>
+                    But since you're ballin' on a budget... we gotta get some extra deets on you, just some routinary questions you know.
+                    Don't worry, these are confidencial, and Membership team and I (the Robot) will treat them with care. Just bear in mind
+                    that some human (or a robot) may get in touch to suss out additional info of your earnings and whatnot to see if you're a good fit.
                 </p>
             </div>
 
