Few tweaks before the registration opens

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -20,7 +20,7 @@
                         <strong>NOTE:</strong> Since the event has a limited capacity we sell memberships using a lottery. Read more about it on the <a href="..">front page</a>.
                         <h2>Important</h2>
                         <p>You <strong>must</strong> register with your <strong>legal name and date of birth</strong>, as it appears on official documents. When you buy a membership you must enter <strong>the same information</strong> as you do here. When we exchange your membership for a wristband we will <strong>ask to see official ID documents</strong>.</p>
-                        <p>We may invalidate your membership if the information does not match. If the name on your ID does not match your membership, we may deny you entry to the event. This is to stop cheating by entering several times in the lottery.</p>
+                        <p>We will invalidate your membership if the information does not match. If the name on your ID does not match your membership, we will deny you entry to the event. This is to stop cheating by entering several times in the lottery.</p>
                         <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. If you want special considerations, please check the <a href="../page/faq">FAQ</a> and get in touch. </p>
                     </div>
 
@@ -33,7 +33,7 @@
                                 <br/>
                                 <div class="col-sm-10">
                                 &#8212;Cough, Cough&#8212; Darling 🤖❤️, if you're rolling in dough 💰, then back off the low income membership option for the good of all!.<br/>
-                                No funny business &#8211; <strong>only check it if you really need it</strong>
+                                No funny business &#8211; We have very few low-income memberships, so apply for it only if you would struggle economically to come to Borderland without a low-income membership.
                                 &nbsp;<br/>
                                 &nbsp;<br/>
                                 </div>
