--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -22,6 +22,11 @@
                         <p>You <strong>must</strong> register with your <strong>legal name and date of birth</strong>, as it appears on official documents. When you buy a membership you must enter <strong>the same information</strong> as you do here. When we exchange your membership for a wristband we will <strong>ask to see official ID documents</strong>.</p>
                         <p>We will invalidate your membership if the information does not match. If the name on your ID does not match your membership, we will deny you entry to the event. This is to stop cheating by entering several times in the lottery.</p>
                         <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. If you want special considerations, please check the <a href="../page/faq">FAQ</a> and get in touch. </p>
+
+                        <h2>Selection Process</h2>
+                        <p>
+                            Our membership team will review your requests with hearts in their eyes. Unfortunately, we won't be sending out separate updates on your application status. But don't worry, if you happen to strike it rich and win the lottery and are approved for the low-income membership, you're in luck! However, if you're not approved but still win the lottery, you'll have to settle for a regular membership. And if you don't win the lottery, you will not be able to buy a low-income membership at all. Oh, and by the way, no +1s will be eligible for the low-income perk, sorry to burst your bubble. Keep your eyes peeled for updates and fingers crossed for that winning lottery draw! 😎🤞
+                        </p>
                     </div>
 
                     <div class="col-sm-12">
