update message in the registration form regarding who to get in touch with

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register.html
@@ -21,7 +21,7 @@
                         <h2>Important</h2>
                         <p>You <strong>must</strong> register with your <strong>legal name and date of birth</strong>, as it appears on official documents. When you buy a membership you must enter <strong>the same information</strong> as you do here. When we exchange your membership for a wristband we will <strong>ask to see official ID documents</strong>.</p>
                         <p>We will invalidate your membership if the information does not match. If the name on your ID does not match your membership, we will deny you entry to the event. This is to stop cheating by entering several times in the lottery.</p>
-                        <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. If you want special considerations, please check the <a href="../page/faq">FAQ</a> and get in touch. </p>
+                        <p>We know this is unfortunate for some of our attendees who go by names other than what's in their documents. We will ask for a preferred name when you buy a membership, which is what we'll use everywhere else. Having said so, in certain cases we can make exceptions. Please contact us at <a href="mailto: memberships@theborderland.se">memberships@theborderland.se</a> and get in touch.</p>
 
 <!--
                         <h2>Selection Process</h2>
