Fix low income page, it should show only for those registered users that have applied for it

--- a/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
+++ b/pretix-borderland/pretix_borderland/templates/pretix_borderland/register_low_income.html
@@ -51,7 +51,7 @@
     <div class="col-sm-12">
         <h2>Low Income Membership Form</h2>
         <p>
-            You have already applied for a low income membership. Should you want to change your application, please contact the membership team directly on Discord.<br/><br>
+            You have already provided all the information needed to be considered for a low income membership. Should you want to change your application, please contact the membership team directly on Discord.<br/><br>
         </p>
 
     </div>
